php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21800 Segfault in CLI
Submitted: 2003-01-21 12:36 UTC Modified: 2003-06-15 06:45 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: carl at thep dot lu dot se Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2003-01-21 (dev) OS: Linux
Private report: No CVE-ID: None
 [2003-01-21 12:36 UTC] carl at thep dot lu dot se
the following produces a coredump:

root@numenor-19:30 [~]:php -ea
Interactive mode enabled

<? echo "hurga"; ?>

Segmentation fault (core dumped)

Backtrace gives
(gdb) bt
#0  0x00000000 in ?? ()
#1  0x081f3a4f in execute (op_array=0x0) at /usr/local/src/cvs/php5/Zend/zend_execute.c:1218
#2  0x081d78b9 in execute_new_code () at /usr/local/src/cvs/php5/Zend/zend_execute_API.c:827
#3  0x081be693 in zendparse () at /usr/local/src/cvs/php5/Zend/zend_language_parser.y:148
#4  0x081c272d in compile_file (file_handle=0xbffff930, type=2) at /usr/local/src/cvs/php5/Zend/zend_language_scanner.l:297
#5  0x081e14ad in zend_execute_scripts (type=8, retval=0x0, file_count=3) at /usr/local/src/cvs/php5/Zend/zend.c:992
#6  0x081a84c7 in php_execute_script (primary_file=0xbffff930) at /usr/local/src/cvs/php5/main/main.c:1691
#7  0x0820966f in main (argc=2, argv=0xbffff9c4) at /usr/local/src/cvs/php5/sapi/cli/php_cli.c:753
#8  0x420158d4 in __libc_start_main () from /lib/i686/libc.so.6

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-21 12:47 UTC] moriyoshi@php.net
not reproduced with ZE1 => reclassfying as ZE2 problem

 [2003-01-21 13:05 UTC] iliaa@php.net
The bug occurs due to the handler in execute_data.opline->handler not being set. 
 [2003-06-15 06:45 UTC] stas@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Aug 01 04:00:01 2026 UTC