Fix bug #21800 - initialize opcode handlers in interactive mode

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@131656 c90b9560-bf6c-de11-be94-00142212c4b1